[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "so4gp"
dynamic = ["version"]
dependencies = [
  "numpy~=2.4.6",
  "pandas~=3.0.3",
  "tabulate~=0.10.0",
  "scikit-fuzzy~=0.5.0",
  "scikit-learn~=1.9.0",
  "seaborn~=0.13.2",
  "matplotlib~=3.11.0",
  "python-dateutil~=2.9.0",
]
requires-python = ">=3.14"
authors = [
  {name = "Dickson Owuor", email = "owuordickson@gmail.com"},
  {name = "Anne Laurent", email = "laurent@lirmm.fr"}
]
maintainers = [
  {name = "Dickson Owuor", email = "owuordickson@gmail.com"}
]
description = "A Python library for gradual pattern mining algorithms."
readme =  "README.md"
license = "MIT"
license-files = ["LICENSE*"]
keywords = ["gradual patterns", "GRAANK", "ant-colony-optimization", "data-mining", "swarm-intelligence"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]


[project.urls]
Homepage = "https://github.com/owuordickson/sogp_pypi"
Documentation = "http://sogp-pypi.readthedocs.io"
Repository = "https://github.com/owuordickson/sogp_pypi.git"
"Bug Tracker" = "https://github.com/owuordickson/sogp_pypi/issues"
Changelog = "https://github.com/owuordickson/sogp_pypi/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "so4gp.__version__"}

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
